# UEDGE

./: ACKNOWLEDGEMENTS.md  CITATION.md  CONTRIBUTING.md  MANIFEST.in  Makefile.Forthon  README.md  get_packages.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  cibw_repair.sh  cibw_repair_macfix.sh  dependabot.yml
.github/workflows/: build-test-wheel.yml  protect-stale-branches.yml
aph/: aphread.m
bbb/: Package  bbb.v  boundary.m  convert.m  exmain.c  ext_neutrals.m  geometry.m  griddubl.m  oderhs.m  odesetup.m  odesolve.m  pandf.m  pandf_boundary.m  pandf_gas_continuity.m  pandf_gas_energy.m  pandf_jacobian.m  pandf_plasma_continuity.m  pandf_plasma_energy.m  pandf_plasma_momentum.m  pandf_potencur.m  s.m  turbulence.m
buildscripts/: tls_audit.sh
com/: com.v  comutil.m
doc/: SOP.md  workflow.md
doc/docs/: stale-branches-log.md
doc/gridue/: README_EFIT_A-G_file_formats
doc/maintainers/: stale-branches.md  stale-branches.md.md
flx/: Package  flxcomp.m  flxread.m  flxwrit.m
grd/: grd.v  grdcomp.m  grdread.m
ppp/: debug_parallel.F90  omp_parallel.F90  parallel.F90  ppp.v
src/uedge/: __init__.py  _banner.py  _checkver.py  _provenance.py  balance.py  gridue.py  rundt.py  uedge.py
svr/: Package  nksol.m  svrut3.m
